# prabhupada_os

./: .gitignore  README.md  STEWARD.md  boot.py  demo_library.py
prabhupada_os/: CONSTITUTION.md  README.md  RELEASE_NOTES.md  cli.py  planet.yaml
prabhupada_os/cortex/: capabilities.json  system.md
prabhupada_os/cortex/epub_knowledge/: ontology.yaml  parsing_rules.yaml
prabhupada_os/cortex/tests/: boundary.json  regression.json
prabhupada_os/interface/: app.py
prabhupada_os/interfaces/cli/: chatbot_cli.py
prabhupada_os/kernel/: bridge.py  logic.py  main.py  schema.py  verses.db
prabhupada_os/kernel/integrity/: verify_yaml_refs.py
prabhupada_os/kernel/utils/: epub_inspector.py
prabhupada_os/knowledge/: query_engine.py
prabhupada_os/knowledge/ingestion/: analyze_epub.py  build_catalog.py  fallback_parser.py  find_missing.py  fix_merged_verses.py  import_gita.py  mvp_parser.py  parser_os.py  verse_catalog.json
prabhupada_os/knowledge/semantic/: embedder.py
prabhupada_os/knowledge/store/: vectors.pkl
prabhupada_os/pads/: PAD-006_KNOWLEDGE_DEPARTMENT.md
prabhupada_os/patterns/: gita_patterns.yaml
prabhupada_os/prabhupada/: __init__.py  core.py  intelligence.py
prabhupada_os/prabhupada/providers/: __init__.py  dummy.py
prabhupada_os/runtime/: graph_loader.py  loader.py  offline_shell.py
prabhupada_os/steward/: agent.py  logger.py  queue.py
prabhupada_os/steward/core/: orchestrator.py  provider.py  recovery.py  router.py  validator.py
prabhupada_os/steward/jobs/: job_20251121_180452.json
prabhupada_os/tools/: audit_gita.py  epub_dump.txt  manual_patch.py  part0005_dump.html  patch_13_1.py  semantic_parser.py
techno_upgrade/explore_agent/: README.md  setup.py
techno_upgrade/prompt_registry_/: LICENSE  README.md  pyproject.toml
techno_upgrade/prompt_registry_/examples/: basic_usage.py
techno_upgrade/prompt_registry_/examples/prompts/expert_personas/: data_analyst.json
techno_upgrade/prompt_registry_/prompt_registry/: __init__.py  context_injector.py  models.py  registry.py  validator.py
(+26 files in other folders)
